# ChemTSv2

./: .gitignore  404.html  Dockerfile  LICENSE  README.md  chemts.py  chemts_mothods.py  generate_lead.py  index.html  mkdocs.yml  pyproject.toml  run.py  run_chemts.py  run_mp.py  sbmolgen.py  setting.yaml  setup.py  utils.py
analize/: sel_toppose_sort_num.py
chemtsv2/: __init__.py  abc.py  filter.py  mcts.py  mp_utils.py  parallel_mcts.py  parallel_mcts_ls.py  preprocessing.py  pyproject.toml  reward.py  run.py  run_mp.py  scaler.py  utils.py
chemtsv2/cli/: add_cores_to_linker.py  add_fragment_to_scaffold.py  augment_dataset_with_randomized_smiles.py  debug_check.py  result_column_splitter.py  run.py  run_mp.py  train_rnn.py
chemtsv2/misc/: 3d_embed.py  README.md  add_cores_to_linker.py  debug_check.py  embed_3d.py  manage_qsub_parallel.py  qsub_parallel_job_pcc-normal.sh  qsub_parallel_job_pcc-skl.sh  result_column_splitter.py  scaler.py
chemtsv2/misc/property_prediction/: hyperopt.yaml  predict.yaml  predict_molecule_property.py  training.yaml  training_molecule_property.py
config/: rnn_model_setting.yaml  setting.yaml  setting2.yaml  setting_IPE.yaml  setting_IPE_qsub_leaf_parallel.yaml  setting_chro.yaml  setting_chro_gamess.yaml  setting_conjugation.yaml  setting_diffdock.yaml  setting_dscore.yaml  setting_fluor.yaml  setting_gnina_interaction.yaml  setting_gnina_rmsd.yaml  setting_gnina_rmsd_singularity.yaml  setting_gnina_singularity.yaml  setting_gnina_strain.yaml  setting_jscore.yaml  setting_linker.yaml  setting_linker_protac.yaml  setting_mp.yaml  setting_mp_chro.yaml  setting_mp_fluor.yaml  setting_mp_uv.yaml  setting_opt_IPE_qsub_leaf_parallel.yaml  setting_pharmacophore.yaml  setting_prop_pred.yaml  setting_rdock.yaml  setting_rescaling.yaml  setting_restart.yaml  setting_scaffold_decoration.yaml  setting_tankbind.yaml  setting_uv.yaml  setting_vina-gpu_binary.yaml  setting_vina-gpu_binary_geodiff.yaml  setting_vina.yaml  setting_vina_binary.yaml  setting_vina_binary_interaction.yaml
data/: 2019PubChemQC_can_nocharge.smi  5h2_lig.mol  5h2_lig.mol2  ChEMBL_220K_zinc250K_linker_fragments_randomized.smi  README.md  atoms_dict.txt  chembl_fps.npy  reaction_list_stereo_a.txt  reaction_list_stereo_aa.txt  reactions_mod_tautomer.txt  reactions_protomer.txt  result_for_debug.csv  result_for_debug_long.csv  ss_list_3d.txt  ss_list_mod_tautomer.txt  ss_list_protomer.txt  sure_chembl_alerts.txt
doc/: autodock_vina.md  multiobjective_optimization_using_dscore.md
docs/: index.md
example_ligand_design/: cavity.as  cavity.prm  receptor.mol2  setting.yaml
examples/: index.html
filter/: README.md  aromatic_ring_filter.py  attachment_points_filter.py  covalent_warhead_filter.py  fused_ring_filter.py  hashimoto_filter.py  hba_filter.py  hbd_filter.py  linker_validation_filter.py  lipinski_filter.py  logp_filter.py  monomer_filter.py  mw_filter.py  no_charge_filter.py  nrotb_filter.py  pains_filter.py  pubchem_filter.py  radical_filter.py  ring_size_filter.py  sascore_filter.py  tpsa_filter.py
misc/: debug_check.py  filter.py  load_model.py  make_smiles.py  manage_qsub_parallel.py  qsub_parallel_job.py  utils.py
model/: README.md  model.tf25.h5  model.tf25.json  model2.tf25.h5  model2.tf25.json  model_chembl220k.tf25.json  model_linker.tf25.json  model_linker_protac.tf25.json  model_pubchemqc.tf25.json  model_zinc_chon.tf25.json  tokens.pkl  tokens_chembl220k.pkl  tokens_linker.pkl  tokens_linker_protac.pkl  tokens_pubchemqc.pkl  tokens_zinc_chon.pkl  tokens_zinc_rand.pkl
policy/: policy.py  ucb1.py
(+96 files in other folders)
