[tool.poetry]
name = "chemtsv2"
version = "2.0.0"
description = "ChemTSv2 is a flexible and versatile molecule generator based on reinforcement learning with natural language processing."
authors = [
    "Shoichi Ishida <ishida.sho.nm@yokohama-cu.ac.jp>"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/molecule-generator-collection/ChemTSv2"
classifiers = [
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3.11',
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
packages = [{include = "chemtsv2"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
tensorflow = "~2.14.1"
tensorflow-macos = {version = "~2.14.1", platform = "darwin", markers = "platform_machine=='arm64'"}
tensorflow-cpu-aws = {version = "~2.14.1", platform = "linux", markers = "platform_machine=='arm64' or platform_machine=='aarch64'"}
numpy = "~1.26.2"
protobuf = "~4.25.1"
rdkit = "~2023.9.1"
selfies = "^2.1.0"
pyyaml = "*"
pandas = "~2.1.3"
joblib = "*"
mpi4py = {version = "~3.1.5", optional = true}

[tool.poetry.scripts]
chemtsv2 = "chemtsv2.cli.run:main"
chemtsv2-mp = "chemtsv2.cli.run_mp:main"
chemtsv2-debug-check = "chemtsv2.cli.debug_check:main"
chemtsv2-column-splitter = "chemtsv2.cli.result_column_splitter:main"
chemtsv2-add-cores-to-linker = "chemtsv2.cli.add_cores_to_linker:main"
chemtsv2-train-rnn = "chemtsv2.cli.train_rnn:main"
chemtsv2-augment-dataset = "chemtsv2.cli.augment_dataset_with_randomized_smiles:main"

[tool.poetry.extras]
mp = ["mpi4py"]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
ignore = [
    "E402",
    "F841",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
