[tool.poetry]
name = "chemtsv2_poetry"
version = "1.0.0"
description = ""
authors = ["sishida21 <29348731+sishida21@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "chemtsv2_poetry"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
chemtsv2 = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
